--- a/config.env
+++ b/config.env
@@ -3,10 +3,9 @@
 OWNER_ID = "680745190"
 TELEGRAM_API = "2175637"
 TELEGRAM_HASH = "3768f77fa58f2ac3ab5e72f7bfa6df34"
-BOT_TOKEN = "5958506055:AAFbxJfkQAgroHR_HwlJeGBMJr1gMbkK9Rk"
-
+BOT_TOKEN = "5098473420:AAG3HpSWs-hcSeQ3STh3ZeZUoxSzCbcw-uo"
 # Update
-UPSTREAM_REPO = "https://github.com/rachelhasbigtits69/Z-Mirror/"
+UPSTREAM_REPO = "https://github.com/punisherx9/ZM/"
 UPSTREAM_BRANCH = "main"
 
 # OPTIONAL CONFIG
@@ -61,8 +60,8 @@ BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 
 #Queueing system
-QUEUE_ALL = "2"
-QUEUE_DOWNLOAD = "1"
+QUEUE_ALL = "4"
+QUEUE_DOWNLOAD = "3"
 QUEUE_UPLOAD = "1"
 
 # RSS
@@ -74,7 +73,7 @@ MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 
 #Limits
-STORAGE_THRESHOLD = "1"
+STORAGE_THRESHOLD = ""
 TORRENT_LIMIT = ""
 DIRECT_LIMIT = ""
 YTDLP_LIMIT = ""
