--- a/config.env
+++ b/config.env
@@ -36,8 +36,8 @@ STOP_DUPLICATE = "False"
 INDEX_URL = ""
 
 # Rclone
-RCLONE_PATH = "Dec_2023_Sarah:Bot_Uploads"
-RCLONE_FLAGS = ""
+RCLONE_PATH = "rcl"
+RCLONE_FLAGS = "--transfers 2"
 RCLONE_SERVE_URL = ""
 RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
@@ -55,9 +55,9 @@ USER_DUMP = ""
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "600"
-BASE_URL = "https://z-mirror-rac.light-lizabeth.koyeb"
+BASE_URL = "https://perfect-marina-leech24.koyeb.app"
 BASE_URL_PORT = "80"
-WEB_PINCODE = "False"
+WEB_PINCODE = "True"
 
 #Queueing system
 QUEUE_ALL = "4"
