--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "rc"
 STATUS_UPDATE_INTERVAL = "5"
 AUTO_DELETE_MESSAGE_DURATION = "-1"
-EXTENSION_FILTER = "index html exe png jpeg ico "
+EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "True"
 YT_DLP_OPTIONS = ""
 
