--- a/config.env
+++ b/config.env
@@ -37,7 +37,7 @@ INDEX_URL = ""
 
 # Rclone
 RCLONE_PATH = "rcl"
-RCLONE_FLAGS = "--transfers 2"
+RCLONE_FLAGS = ""
 RCLONE_SERVE_URL = ""
 RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
@@ -57,7 +57,7 @@ USER_DUMP = ""
 TORRENT_TIMEOUT = "600"
 BASE_URL = "https://fond-dorita-hkclasirena69.koyeb.app"
 BASE_URL_PORT = "80"
-WEB_PINCODE = "True"
+WEB_PINCODE = "False"
 
 #Queueing system
 QUEUE_ALL = "4"
